# daydream

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/: App.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  idle.rs  lib.rs  main.rs  player.rs  thumbnail.rs
src/components/: AddProgress.tsx  DropZone.tsx  GlobalSettings.tsx  ItemEditor.tsx  LoopManager.tsx  Toast.tsx  VideoItem.tsx
src/store/: useStore.ts
