[package]
name = "daydream"
version = "0.1.0"
description = "Idle video looper"
authors = ["you"]
edition = "2021"

[lib]
name = "daydream_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.11", features = ["tray-icon"] }
tauri-plugin-autostart = "2.5"
tauri-plugin-dialog = "2.7"
tauri-plugin-fs = "2.5"
tauri-plugin-shell = "2.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "6.0"
snafu = "0.8"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
md-5 = "0.10"
base64 = "0.22"

[profile.release]
strip = true
lto = true
codegen-units = 1
